--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoose": "^8.1.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   }
